--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <link rel="stylesheet" href="./pages/style.css">
-  <title>Mesto Russia</title>
+  <title>Места России</title>
 </head>
 
 <body class="page">
+  <section class="popup popup_opened">
+    <fieldset class="popup__container">
+      <h2 class="popup__heading">Редактировать профиль</h2>
+      <input class="popup__name" type="text" name="name" placeholder="Имя" required>
+      <div class="popup__line"></div>
+      <input class="popup__about" type="text" name="about" placeholder="О себе" required>
+      <div class="popup__line"></div>
+      <button class="popup__button" type="submit">Сохранить</button>
+      <img class="popup__close" src="./images/Close_Icon.png" alt="&times;">
+    </fieldset>
+  </section>
   <main class="content">
-    <section class="popup popup_opened">
-      <fieldset class="popup__container">
-        <h2 class="popup__heading">Редактировать профиль</h2>
-        <input class="popup__filed popup__filed_name" type="text" name="name" placeholder="Жак-Ив Кусто" required>
-        <input class="popup__filed popup__filed_about" type="text" name="about" placeholder="Исследователь океана"
-          required>
-        <button class="popup__button" type="submit">Сохранить</button>
-        <img class="popup__close" src="./images/Close Icon.png" alt="&times;">
-      </fieldset>
-    </section>
+
     <header class="header">
       <img src="./images/header_logo.svg" alt="Mesto Russia" class="header__logo">
       <div class="header__line"></div>
@@ -42,9 +43,9 @@
         <img src="./images/Karachaevsk.jpg" alt="Карачаевск" class="elements__mask-group">
         <div class="elements__group">
           <p class="elements__text">Карачаевск </p>
-          <label class="elements__button" for="like">
-            <input type="checkbox" name="like" value="yes" class="elements__like">
-            <span class="pseudo__like-button"></span>
+          <label class="elements__button">
+            <input type="checkbox" name="like" value="like" class="elements__like">
+            <span class="elements__pseudo-like"></span>
           </label>
         </div>
       </div>
@@ -52,9 +53,9 @@
         <img src="./images/Elbrus.jpg" alt="Гора Эльбрус" class="elements__mask-group">
         <div class="elements__group">
           <p class="elements__text">Гора Эльбрус </p>
-          <label class="elements__button" for="like">
-            <input type="checkbox" name="like" value="yes" class="elements__like">
-            <span class="pseudo__like-button"></span>
+          <label class="elements__button">
+            <input type="checkbox" name="like" value="like" class="elements__like">
+            <span class="elements__pseudo-like"></span>
           </label>
         </div>
       </div>
@@ -62,9 +63,9 @@
         <img src="./images/dombai.jpg" alt="Домбай" class="elements__mask-group">
         <div class="elements__group">
           <p class="elements__text">Домбай </p>
-          <label class="elements__button" for="like">
-            <input type="checkbox" name="like" value="yes" class="elements__like">
-            <span class="pseudo__like-button"></span>
+          <label class="elements__button">
+            <input type="checkbox" name="like" value="like" class="elements__like">
+            <span class="elements__pseudo-like"></span>
           </label>
         </div>
       </div>
@@ -72,9 +73,9 @@
         <img src="./images/Elbrus.jpg" alt="Гора Эльбрус" class="elements__mask-group">
         <div class="elements__group">
           <p class="elements__text">Гора Эльбрус </p>
-          <label class="elements__button" for="like">
-            <input type="checkbox" name="like" value="yes" class="elements__like">
-            <span class="pseudo__like-button"></span>
+          <label class="elements__button">
+            <input type="checkbox" name="like" value="like" class="elements__like">
+            <span class="elements__pseudo-like"></span>
           </label>
         </div>
       </div>
@@ -82,9 +83,9 @@
         <img src="./images/dombai.jpg" alt="Домбай" class="elements__mask-group">
         <div class="elements__group">
           <p class="elements__text">Домбай </p>
-          <label class="elements__button" for="like">
-            <input type="checkbox" name="like" value="yes" class="elements__like">
-            <span class="pseudo__like-button"></span>
+          <label class="elements__button">
+            <input type="checkbox" name="like" value="like" class="elements__like">
+            <span class="elements__pseudo-like"></span>
           </label>
         </div>
       </div>
@@ -92,9 +93,9 @@
         <img src="./images/Karachaevsk.jpg" alt="Карачаевск" class="elements__mask-group">
         <div class="elements__group">
           <p class="elements__text">Карачаево-Черкесия </p>
-          <label class="elements__button" for="like">
-            <input type="checkbox" name="like" value="yes" class="elements__like">
-            <span class="pseudo__like-button"></span>
+          <label class="elements__button">
+            <input type="checkbox" name="like" value="like" class="elements__like">
+            <span class="elements__pseudo-like"></span>
           </label>
         </div>
       </div>
