--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <h1 class="profile__name">Жак&#8209;Ив&nbsp;Кусто</h1>
         <p class="profile__about-me">Исследователь океана</p>
       </div>
-      <button class="profile__edit-button" aria-label="edit-button" type="button"></button>
-      <button class="profile__add-button" aria-label="add-button" type="button"></button>
+      <button class="profile__edit-button" aria-label="редактировать" type="button"></button>
+      <button class="profile__add-button" aria-label="добавить" type="button"></button>
     </section>
     <section class="elements">
       <div class="elements__rectangle">
@@ -75,7 +75,7 @@
   <section class="popup popup_opened">
     <div class="popup__container">
       <h2 class="popup__heading">Редактировать профиль</h2>
-      <form class="form popup__form" action="" name="profile">
+      <form class="form popup__form" action="#" name="profile">
         <input class="form__input form__input_popup_name" type="text" name="name" placeholder="Имя" required>
         <input class="form__input form__input_popup_about" type="text" name="about" placeholder="О себе" required>
         <button class="form__button form__button_popup_save" aria-label="save" type="submit">Сохранить</button>
