добавил джава скрипт , добавил второй попап, добавил кнопку удалить

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <section class="elements">
       <div class="elements__rectangle">
         <img src="./images/Karachaevsk.jpg" alt="Карачаевск" class="elements__mask-group">
+        <button class="elements__delete" aria-label="delete" type="button"></button>
         <div class="elements__group">
           <h2 class="elements__text">Карачаевск</h2>
           <button class="elements__like" aria-label="like" type="button"></button>
@@ -34,6 +35,7 @@
       </div>
       <div class="elements__rectangle">
         <img src="./images/Elbrus.jpg" alt="Гора Эльбрус" class="elements__mask-group">
+        <button class="elements__delete" aria-label="delete" type="button"></button>
         <div class="elements__group">
           <h2 class="elements__text">Гора Эльбрус</h2>
           <button class="elements__like" aria-label="like" type="button"></button>
@@ -41,6 +43,7 @@
       </div>
       <div class="elements__rectangle">
         <img src="./images/dombai.jpg" alt="Домбай" class="elements__mask-group">
+        <button class="elements__delete" aria-label="delete" type="button"></button>
         <div class="elements__group">
           <h2 class="elements__text">Домбай</h2>
           <button class="elements__like" aria-label="like" type="button"></button>
@@ -48,6 +51,7 @@
       </div>
       <div class="elements__rectangle">
         <img src="./images/Elbrus.jpg" alt="Гора Эльбрус" class="elements__mask-group">
+        <button class="elements__delete" aria-label="delete" type="button"></button>
         <div class="elements__group">
           <h2 class="elements__text">Гора Эльбрус</h2>
           <button class="elements__like" aria-label="like" type="button"></button>
@@ -55,6 +59,7 @@
       </div>
       <div class="elements__rectangle">
         <img src="./images/dombai.jpg" alt="Домбай" class="elements__mask-group">
+        <button class="elements__delete" aria-label="delete" type="button"></button>
         <div class="elements__group">
           <h2 class="elements__text">Домбай</h2>
           <button class="elements__like" aria-label="like" type="button"></button>
@@ -62,6 +67,7 @@
       </div>
       <div class="elements__rectangle">
         <img src="./images/Karachaevsk.jpg" alt="Карачаевск" class="elements__mask-group">
+        <button class="elements__delete" aria-label="delete" type="button"></button>
         <div class="elements__group">
           <h2 class="elements__text">Карачаево-Черкесия</h2>
           <button class="elements__like" aria-label="like" type="button"></button>
@@ -72,7 +78,7 @@
   <footer class="footer">
     <p class="footer__text">© 2020 Mesto Russia</p>
   </footer>
-  <section class="popup popup_opened">
+  <section class="popup popup_opened_profile">
     <div class="popup__container">
       <h2 class="popup__heading">Редактировать профиль</h2>
       <form class="form popup__form" action="#" name="profile">
@@ -83,7 +89,23 @@
       </form>
 
     </div>
+
   </section>
+  <section class="popup popup_opened_card">
+    <div class="popup__container">
+      <h2 class="popup__heading">Новое место</h2>
+      <form class="form popup__form" action="#" name="new-item">
+        <input class="form__input form__input_popup_designation" type="text" name="designation" placeholder="Название"
+          required>
+        <input class="form__input form__input_popup_link-picture" type="text" name="link-picture"
+          placeholder="Ссылка на картинку" required>
+        <button class="form__button form__button_popup_save" aria-label="save" type="submit">Создать</button>
+        <button class=" form__button form__button_popup_close-card" aria-label="close" type="button"></button>
+      </form>
+
+    </div>
+  </section>
+  <script src="script.js"></script>
 </body>
 
 </html>
