--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
 
     </div>
   </section>
+  <template id="elements-template">
+    <div class="elements__rectangle">
+      <img src="#" alt="фото поста" class="elements__mask-group">
+      <button class="elements__delete" aria-label="delete" type="button"></button>
+      <div class="elements__group">
+
+        <button class="elements__like" aria-label="like" type="button"></button>
+      </div>
+    </div>
+  </template>
   <script src="script.js"></script>
 </body>
 
