до делал доабвление карточек, сделал лайки

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <section class="popup popup_opened_card">
     <div class="popup__container">
       <h2 class="popup__heading">Новое место</h2>
-      <form class="form popup__form" action="#" name="new-item">
+      <form class="form popup__form_card" action="#" name="new-item">
         <input class="form__input form__input_popup_designation" type="text" name="designation" placeholder="Название"
           required>
         <input class="form__input form__input_popup_link-picture" type="text" name="link-picture"
@@ -110,7 +110,7 @@
       <img src="#" alt="фото поста" class="elements__mask-group">
       <button class="elements__delete" aria-label="delete" type="button"></button>
       <div class="elements__group">
-
+        <h2 class="elements__text"></h2>
         <button class="elements__like" aria-label="like" type="button"></button>
       </div>
     </div>
