--- a/index.html
+++ b/index.html
@@ -46,13 +46,23 @@
   <section class="popup popup_opened_card">
     <div class="popup__container">
       <h2 class="popup__heading">Новое место</h2>
-      <form class="form popup__form_card" action="#" name="new-item">
+      <form class="form form_card" action="#" name="new-item">
         <input class="form__input form__input_popup_designation" type="text" name="designation" placeholder="Название"
           required>
         <input class="form__input form__input_popup_link-picture" type="text" name="link-picture"
           placeholder="Ссылка на картинку" required>
         <button class="form__button form__button_popup_save" aria-label="save" type="submit">Создать</button>
         <button class=" form__button form__button_popup_close-card" aria-label="close" type="button"></button>
+      </form>
+
+    </div>
+  </section>
+  <section class="popup popup_opened_image">
+    <div class="popup__container-image">
+      <img src="#" alt="фото поста" class="popup__image">
+      <h2 class="popup__text popup__text_image">#</h2>
+      <form class="form form_image" action="#" name="new-item">
+        <button class=" form__button form__button_popup_close-image" aria-label="close" type="button"></button>
       </form>
 
     </div>
