--- a/index.html
+++ b/index.html
@@ -2,21 +2,19 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./pages/index.css" />
   <title>Места России</title>
 </head>
 
 <body class="page">
-
   <header class="header">
-    <img src="./images/header_logo.svg" alt="Mesto Russia" class="header__logo">
-
+    <img src="./images/header_logo.svg" alt="Mesto Russia" class="header__logo" />
   </header>
   <main class="content">
     <section class="profile">
-      <img src="./images/Jac-Coosto.jpg" alt="аватар" class="profile__avatar">
+      <img src="./images/Jac-Coosto.jpg" alt="аватар" class="profile__avatar" />
       <div class="profile__info">
         <h1 class="profile__name">Жак&#8209;Ив&nbsp;Кусто</h1>
         <p class="profile__about-me">Исследователь океана</p>
@@ -24,8 +22,7 @@
       <button class="profile__edit-button" aria-label="редактировать" type="button"></button>
       <button class="profile__add-button" aria-label="добавить" type="button"></button>
     </section>
-    <section class="elements">
-    </section>
+    <section class="elements"></section>
   </main>
   <footer class="footer">
     <p class="footer__text">© 2020 Mesto Russia</p>
@@ -34,42 +31,40 @@
     <div class="popup__container">
       <h2 class="popup__heading">Редактировать профиль</h2>
       <form class="form popup__form" action="#" name="profile">
-        <input class="form__input form__input_popup_name" type="text" name="name" placeholder="Имя" required>
-        <input class="form__input form__input_popup_about" type="text" name="about" placeholder="О себе" required>
-        <button class="form__button form__button_popup_save" aria-label="save" type="submit">Сохранить</button>
-        <button class=" form__button form__button_popup_close" aria-label="close" type="button"></button>
+        <input class="form__input form__input_popup_name" type="text" name="name" placeholder="Имя" required />
+        <input class="form__input form__input_popup_about" type="text" name="about" placeholder="О себе" required />
+        <button class="form__button form__button_popup_save" aria-label="save" type="submit">
+          Сохранить
+        </button>
+        <button class="form__button form__button_popup_close" aria-label="close" type="button"></button>
       </form>
-
     </div>
-
   </section>
   <section class="popup popup_opened_card">
     <div class="popup__container">
       <h2 class="popup__heading">Новое место</h2>
       <form class="form form_card" action="#" name="new-item">
         <input class="form__input form__input_popup_designation" type="text" name="designation" placeholder="Название"
-          required>
+          required />
         <input class="form__input form__input_popup_link-picture" type="text" name="link-picture"
-          placeholder="Ссылка на картинку" required>
-        <button class="form__button form__button_popup_save" aria-label="save" type="submit">Создать</button>
-        <button class=" form__button form__button_popup_close-card" aria-label="close" type="button"></button>
+          placeholder="Ссылка на картинку" required />
+        <button class="form__button form__button_popup_save" aria-label="save" type="submit">
+          Создать
+        </button>
+        <button class="form__button form__button_popup_close-card" aria-label="close" type="button"></button>
       </form>
-
     </div>
   </section>
   <section class="popup popup_opened_image">
     <div class="popup__container-image">
-      <img src="#" alt="фото поста" class="popup__image">
+      <img src="#" alt="фото поста" class="popup__image" />
       <h2 class="popup__text popup__text_image">#</h2>
-      <form class="form form_image" action="#" name="new-item">
-        <button class=" form__button form__button_popup_close-image" aria-label="close" type="button"></button>
-      </form>
-
+      <button class="form__button form__button_popup_close-image" aria-label="close" type="button"></button>
     </div>
   </section>
   <template id="elements-template">
     <div class="elements__rectangle">
-      <img src="#" alt="фото поста" class="elements__mask-group">
+      <img src="#" alt="фото поста" class="elements__mask-group" />
       <button class="elements__delete" aria-label="delete" type="button"></button>
       <div class="elements__group">
         <h2 class="elements__text"></h2>
