--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <button class="form__button form__button_popup_save" aria-label="save" type="submit">
           Сохранить
         </button>
-        <button class="form__button form__button_popup_close" aria-label="close" type="button"></button>
+        <button class="form__button form__button_close" aria-label="close" type="button"></button>
       </form>
     </div>
   </section>
@@ -51,7 +51,7 @@
         <button class="form__button form__button_popup_save" aria-label="save" type="submit">
           Создать
         </button>
-        <button class="form__button form__button_popup_close-card" aria-label="close" type="button"></button>
+        <button class="form__button form__button_close" aria-label="close" type="button"></button>
       </form>
     </div>
   </section>
@@ -59,7 +59,7 @@
     <div class="popup__container-image">
       <img src="#" alt="фото поста" class="popup__image" />
       <h2 class="popup__text popup__text_image">#</h2>
-      <button class="form__button form__button_popup_close-image" aria-label="close" type="button"></button>
+      <button class="form__button form__button_close" aria-label="close" type="button"></button>
     </div>
   </section>
   <template id="elements-template">
