--- a/index.html
+++ b/index.html
@@ -30,9 +30,17 @@
   <section class="popup popup_opened_profile">
     <div class="popup__container">
       <h2 class="popup__heading">Редактировать профиль</h2>
-      <form class="form popup__form" action="#" name="profile">
-        <input class="form__input form__input_popup_name" type="text" name="name" placeholder="Имя" required />
-        <input class="form__input form__input_popup_about" type="text" name="about" placeholder="О себе" required />
+      <form class="form popup__form" action="#" name="profile" novalidate>
+        <label class="form__field">
+          <input class="form__input form__input_popup_name" id="name-input" type="text" name="name" placeholder="Имя"
+            required minlength="2" maxlength="40" />
+          <span class="form__input-error name-input-error "></span>
+        </label>
+        <label class="form__field">
+          <input class="form__input form__input_popup_about" type="text" name="about" id="about-input"
+            placeholder="О себе" required minlength="2" maxlength="200" />
+          <span class="form__input-error about-input-error "></span>
+        </label>
         <button class="form__button form__button_popup_save" aria-label="save" type="submit">
           Сохранить
         </button>
@@ -43,11 +51,17 @@
   <section class="popup popup_opened_card">
     <div class="popup__container">
       <h2 class="popup__heading">Новое место</h2>
-      <form class="form form_card" action="#" name="new-item">
-        <input class="form__input form__input_popup_designation" type="text" name="designation" placeholder="Название"
-          required />
-        <input class="form__input form__input_popup_link-picture" type="text" name="link-picture"
-          placeholder="Ссылка на картинку" required />
+      <form class="form form_card" action="#" name="new_item" novalidate>
+        <label class="form__field">
+          <input class="form__input form__input_popup_designation" id="designation-input" type="text" name="designation"
+            placeholder="Название" required minlength="2" maxlength="30" />
+          <span class="form__input-error designation-input-error "></span>
+        </label>
+        <label class="form__field">
+          <input class="form__input form__input_popup_link-picture" id="picture-input" type="url" name="link_picture"
+            placeholder="Ссылка на картинку" required />
+          <span class="form__input-error picture-input-error "></span>
+        </label>
         <button class="form__button form__button_popup_save" aria-label="save" type="submit">
           Создать
         </button>
