--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </div>
   </template>
-  <script src="script.js"></script>
+  <script type="module" src="./src/components/index.js"></script>
 </body>
 
 </html>
