--- a/src/index.html
+++ b/src/index.html
@@ -13,13 +13,16 @@
   </header>
   <main class="content">
     <section class="profile">
-      <img src="<%=require('./images/Jac-Coosto.jpg')%>" alt="аватар" class="profile__avatar" />
+      <div class="profile__avatar-box">
+        <img src="#" alt="аватар" class="profile__avatar" />
+        <button type="button" class=" profile__button profile__avatar-edit-button"></button>
+      </div>
       <div class="profile__info">
         <h1 class="profile__name">Жак&#8209;Ив&nbsp;Кусто</h1>
         <p class="profile__about-me">Исследователь океана</p>
       </div>
       <button class="profile__edit-button" aria-label="редактировать" type="button"></button>
-      <button class="profile__add-button" aria-label="добавить" type="button"></button>
+      <button class="profile__button profile__add-button" aria-label="добавить" type="button"></button>
     </section>
     <section class="elements"></section>
   </main>
@@ -39,6 +42,22 @@
           <input class="form__input form__input_popup_about" type="text" name="about" id="about-input"
             placeholder="О себе" required minlength="2" maxlength="200" />
           <span class="form__input-error about-input-error "></span>
+        </label>
+        <button class="form__button form__button_popup_save" aria-label="save" type="submit">
+          Сохранить
+        </button>
+        <button class="form__button form__button_close" aria-label="close" type="button"></button>
+      </form>
+    </div>
+  </section>
+  <section class="popup popup_opened_avatar">
+    <div class="popup__container">
+      <h2 class="popup__heading">Обновить аватар</h2>
+      <form class="form avatar__form" action="#" name="avatar" novalidate>
+        <label class="form__field">
+          <input class="form__input form__input_popup_link-avatar" id="avatar-input" type="url" name="link_avatar"
+            placeholder="Ссылка на картинку" required />
+          <span class="form__input-error avatar-input-error "></span>
         </label>
         <button class="form__button form__button_popup_save" aria-label="save" type="submit">
           Сохранить
@@ -75,13 +94,27 @@
       <button class="form__button form__button_close" aria-label="close" type="button"></button>
     </div>
   </section>
+  <section class="popup popup_opened_card-delete">
+    <div class="popup__container popup__container_card-delete">
+      <h2 class="popup__heading popup__heading_card-delete">Вы уверены?</h2>
+      <form class="form form_card-delete" action="#" name="avatar" novalidate>
+        <button class="form__button form__button_popup_save" aria-label="save" type="submit">
+          Да
+        </button>
+        <button class="form__button form__button_close" aria-label="close" type="button"></button>
+      </form>
+    </div>
+  </section>
   <template id="elements-template">
     <div class="elements__rectangle">
       <img src="#" alt="фото поста" class="elements__mask-group" />
-      <button class="elements__delete" aria-label="delete" type="button"></button>
+      <button class="elements__delete elements__delete-btn" aria-label="delete" type="button"></button>
       <div class="elements__group">
         <h2 class="elements__text"></h2>
-        <button class="elements__like" aria-label="like" type="button"></button>
+        <div>
+          <button class="elements__like" aria-label="like" type="button"></button>
+          <p class="elements__like-counter"></p>
+        </div>
       </div>
     </div>
   </template>
