--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,14 @@
     <section class="profile">
       <div class="profile__avatar-box">
         <img src="#" alt="аватар" class="profile__avatar" />
-        <button type="button" class=" profile__button profile__avatar-edit-button"></button>
+        <button type="button" class="profile__avatar-edit-button"></button>
       </div>
       <div class="profile__info">
         <h1 class="profile__name">Жак&#8209;Ив&nbsp;Кусто</h1>
         <p class="profile__about-me">Исследователь океана</p>
       </div>
       <button class="profile__edit-button" aria-label="редактировать" type="button"></button>
-      <button class="profile__button profile__add-button" aria-label="добавить" type="button"></button>
+      <button class="profile__add-button" aria-label="добавить" type="button"></button>
     </section>
     <section class="elements"></section>
   </main>
